--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description"
     content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
-    <link rel="stylesheet" href="./temp/css/style.css">
+  <link rel="stylesheet" href="./temp/css/style.css">
 </head>
 
 <body>
@@ -26,10 +26,15 @@
 
   <div class="large-hero">
     <picture>
-      <source media="(min-width: 1380px)" srcset="./assets/images/hero--large-hi-dpi.jpg 3840w, ./assets/images/hero--large.jpg 1920w">
-      <source media="(min-width: 990px)" srcset="./assets/images/hero--medium-hi-dpi.jpg 2760w, ./assets/images/hero--medium.jpg 1380w">
-      <source media="(min-width: 640px)" srcset="./assets/images/hero--small-hi-dpi.jpg 1980w, ./assets/images/hero--small.jpg 990w">
-      <img class="large-hero__image" srcset="./assets/images/hero--smaller-hi-dpi.jpg 1280w, ./assets/images/hero--smaller.jpg 640w" alt="Coastal view of ocean and mountains">
+      <source media="(min-width: 1380px)"
+        srcset="./assets/images/hero--large-hi-dpi.jpg 3840w, ./assets/images/hero--large.jpg 1920w">
+      <source media="(min-width: 990px)"
+        srcset="./assets/images/hero--medium-hi-dpi.jpg 2760w, ./assets/images/hero--medium.jpg 1380w">
+      <source media="(min-width: 640px)"
+        srcset="./assets/images/hero--small-hi-dpi.jpg 1980w, ./assets/images/hero--small.jpg 990w">
+      <img class="large-hero__image"
+        srcset="./assets/images/hero--smaller-hi-dpi.jpg 1280w, ./assets/images/hero--smaller.jpg 640w"
+        alt="Coastal view of ocean and mountains">
     </picture>
     <!-- <img src="" alt=""> -->
     <div class="large-hero__text-content">
@@ -44,26 +49,46 @@
 
   <div id="our-beginning" class="page-section">
     <div class="wrapper">
-      <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned <strong>was our own</strong>.</h2>
-      <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone</strong>.</h3>
-      <div class="wrapper wrapper--medium"><img src="assets/images/first-trip.jpg" alt="Couple walking down a street."></div>
+      <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned
+        <strong>was our own</strong>.</h2>
+      <h3
+        class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">
+        Ever since, we&rsquo;ve been working to make travel <strong>better for everyone</strong>.</h3>
+      <div class="wrapper wrapper--medium wrapper--b-margin">
+        <img srcset="assets/images/first-trip-low-res-i.jpg 565w, assets/images/first-trip-i.jpg 967w, assets/images/first-trip-hi-dpi-i.jpg 1952w" sizes="(min-width: 976px) 967px, 100vw" alt="Couple walking down a street.">
+      </div>
       <div class="row row--gutters">
-        <div class="row__4-of-12">
-          <img src="assets/images/our-start.jpg" alt="Our founder, Jane Doe">
+        <div class="row__4-of-12 row__4-of-12--larger">
+          <picture>
+            <source media="(min-width: 1020px)" srcset="./assets/images/our-start.jpg 404w, ./assets/images/our-start-hi-dpi.jpg 808w" sizes="404px">
+              <!-- sizes is the to tell the browser to calculate the screen px inside that much viewport px to choose the image with suitalbe width-->
+              <!-- browser will assume sizes = viewport width if we don't specify -->
+            <source media="(min-width: 800px)" srcset="./assets/images/our-start-portrait.jpg 382w, ./assets/images/our-start-portrait-hi-dpi.jpg 764w" sizes="322px">
+            <img srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="Our founder, Jane Doe">
+          </picture>
         </div>
-        <div class="row__8-of-12">
+        <div class="row__8-of-12 row__8-of-12--smaller">
           <h2 class="headline">Here&rsquo;s how we got started&hellip;</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip
-            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
+            magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut
+            aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id
             est laborum.</p>
-          <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+          <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat
+            nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+            est
+            laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+            labore et
             dolore magna aliqua.</p>
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse
+          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur
+            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit
+            esse
             cillum <strong>dolore eu fugiat.</strong></p>
         </div>
       </div>
@@ -74,25 +99,28 @@
     <div class="wrapper">
       <img src="assets/images/icons/star.svg">
       <h2>Our Features</h2>
-  
+
       <img src="assets/images/icons/rain.svg">
       <h3>We&rsquo;ll Watch the Weather</h3>
-      <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your
+      <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around
+        your
         current location. A good rain can be refreshing, but sometimes you just want to stay dry.</p>
-  
+
       <img src="assets/images/icons/globe.svg">
       <h3>Global Guides</h3>
       <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of
         the world you want to escape to we know the most scenic and inspiring locations.</p>
-  
+
       <img src="assets/images/icons/wifi.svg">
       <h3>Wi-Fi Waypoints</h3>
-      <p>We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve mapped
+      <p>We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve
+        mapped
         out where local wi-fi spots are and marked them in our app&rsquo;s map view.</p>
-  
+
       <img src="assets/images/icons/fire.svg">
       <h3>Survival Kit</h3>
-      <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you
+      <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow
+        you
         to setup a tent, start a fire, scratch your own back and lower your taxes.</p>
     </div>
   </div>
@@ -125,7 +153,8 @@
   </div>
 
   <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
+    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in
+        Touch</a></p>
   </footer>
 </body>
 
