Testing merging branches in github.com

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
         class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">
         Ever since, we&rsquo;ve been working to make travel <strong>better for everyone</strong>.</h3>
       <div class="wrapper wrapper--medium wrapper--b-margin">
-        <img srcset="assets/images/first-trip-low-res-i.jpg 565w, assets/images/first-trip-i.jpg 967w, assets/images/first-trip-hi-dpi-i.jpg 1952w" sizes="(min-width: 976px) 967px, 100vw" alt="Couple walking down a street.">
+        <img srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 967w, assets/images/first-trip-hi-dpi.jpg 1952w" sizes="(min-width: 976px) 967px, 100vw" alt="Couple walking down a street.">
       </div>
       <div class="row row--gutters">
         <div class="row__4-of-12 row__4-of-12--larger">
@@ -68,7 +68,7 @@
           </picture>
         </div>
         <div class="row__8-of-12 row__8-of-12--smaller">
-          <h2 class="headline">Here&rsquo;s how we got started&hellip;</h2>
+          <h2 class="headline headline--no-t-margin">Here&rsquo;s how we got started&hellip;</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut
