--- a/app/index.html
+++ b/app/index.html
@@ -60,15 +60,15 @@
       <div class="row row--gutters">
         <div class="row__4-of-12 row__4-of-12--larger">
           <picture>
-            <source media="(min-width: 1020px)" srcset="./assets/images/our-start.jpg 404w, ./assets/images/our-start-hi-dpi.jpg 808w" sizes="404px">
-              <!-- sizes is the to tell the browser to calculate the screen px inside that much viewport px to choose the image with suitalbe width-->
+            <source media="(min-width: 1010px)" srcset="./assets/images/our-start.jpg 404w, ./assets/images/our-start-hi-dpi.jpg 808w" sizes="404px">
+              <!-- sizes is to tell the browser to calculate the screen px inside that much viewport px to choose the image with suitalbe width-->
               <!-- browser will assume sizes = viewport width if we don't specify -->
-            <source media="(min-width: 800px)" srcset="./assets/images/our-start-portrait.jpg 382w, ./assets/images/our-start-portrait-hi-dpi.jpg 764w" sizes="322px">
+            <!-- <source media="(min-width: 800px)" srcset="./assets/images/our-start-portrait.jpg 382w, ./assets/images/our-start-portrait-hi-dpi.jpg 764w" sizes="322px"> -->
             <img srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="Our founder, Jane Doe">
           </picture>
         </div>
         <div class="row__8-of-12 row__8-of-12--smaller">
-          <h2 class="headline headline--no-t-margin-til-medium">Here&rsquo;s how we got started&hellip;</h2>
+          <h2 class="headline headline--no-t-margin-til-large">Here&rsquo;s how we got started&hellip;</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
             dolore
             magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut
@@ -107,7 +107,9 @@
               Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.
             </p>
           </div>
+        </div>
     
+        <div class="row__6-of-12">
           <div class="feature-item">
             <img class="feature-item__icon" src="assets/images/icons/globe.svg">
             <h3 class="feature-item__title">Global Guides</h3>
@@ -127,7 +129,9 @@
               mapped out where local wi-fi spots are and marked them in our app&rsquo;s map view.
             </p>
           </div>
+        </div>
     
+        <div class="row__6-of-12">
           <div class="feature-item">
             <img class="feature-item__icon" src="assets/images/icons/fire.svg">
             <h3 class="feature-item__title">Survival Kit</h3>
@@ -142,31 +146,55 @@
     </div>
   </div>
 
-  <div id="testimonials">
-    <img src="assets/images/icons/comment.svg">
-    <h2>Real Testimonials</h2>
+  <div id="testimonials" class="page-section page-section--testimonials">
+    <div class="wrapper wrapper--no-padding-til-small">
+      <h2 class="section-title section-title--blue"><img class="section-title__image" src="assets/images/icons/comment.svg"> Real <strong>Testimonials</strong></h2>
+  
+      <div class="row row--gutters row--t-padding">
+        <div class="row__4-of-12">
+          <div class="testimonial">
+            <img class="testimonial__avatar" sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+            <h3 class="testimonial__title">Jane Doe</h3>
+            <h4 class="testimonial__subtitle">9 Time Escaper</h4>
+            <p class="testimonial__text">
+              &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              magna aliqua.&rdquo;
+            </p>
+          </div>
+        </div>
 
-    <img src="assets/images/testimonial-jane.jpg">
-    <h3>Jane Doe</h3>
-    <h3>9 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua.&rdquo;</p>
+        <div class="row__4-of-12">
+            <div class="testimonial">
+              <img class="testimonial__avatar" sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+              <h3 class="testimonial__title">John Smith</h3>
+              <h3 class="testimonial__subtitle">4 Time Escaper</h3>
+              <p class="testimonial__text">
+                &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Lorem ipsum dolor sit amet, consectetur.&rdquo;
+              </p>
+            </div>
+        </div>
 
-    <img src="assets/images/testimonial-john.jpg">
-    <h3>John Smith</h3>
-    <h3>4 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+        <div class="row__4-of-12">
+          <div class="testimonial testimonial--no-b-margin">
+            <img class="testimonial__avatar" sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+            <h3 class="testimonial__title">Cat McKitty</h3>
+            <h3 class="testimonial__subtitle">6 Time Escaper</h3>
+            <p class="testimonial__text">
+              &ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;
+            </p>
+          </div>
+        </div>
+      </div>
 
-    <img src="assets/images/testimonial-cat.jpg">
-    <h3>Cat McKitty</h3>
-    <h3>6 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+  
+  
+    </div>
   </div>
 
   <footer>
