--- a/app/index.html
+++ b/app/index.html
@@ -97,11 +97,11 @@
 
   <div id="features" class="page-section page-section--blue">
     <div class="wrapper">
-      <h2 class="section-title"><img class="section-title__image" src="assets/images/icons/star.svg"> Our <strong>Features</strong></h2>
+      <h2 class="section-title"><span class="section-title__image icon icon--star"></span> Our <strong>Features</strong></h2>
       <div class="row row--gutters-large">
         <div class="row__6-of-12">
           <div class="feature-item">
-            <img class="feature-item__icon" src="assets/images/icons/rain.svg">
+            <span class="feature-item__icon icon icon--rain"></span>
             <h3 class="feature-item__title">We&rsquo;ll Watch the Weather</h3>
             <p class="feature-item__content">
               Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.
@@ -111,7 +111,7 @@
     
         <div class="row__6-of-12">
           <div class="feature-item">
-            <img class="feature-item__icon" src="assets/images/icons/globe.svg">
+            <span class="feature-item__icon icon icon--globe"></span>
             <h3 class="feature-item__title">Global Guides</h3>
             <p class="feature-item__content">
               We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of
@@ -122,7 +122,7 @@
 
         <div class="row__6-of-12">
           <div class="feature-item">
-            <img class="feature-item__icon" src="assets/images/icons/wifi.svg">
+            <span class="feature-item__icon icon icon--wifi"></span>
             <h3 class="feature-item__title">Wi-Fi Waypoints</h3>
             <p class="feature-item__content">
               We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve
@@ -133,7 +133,7 @@
     
         <div class="row__6-of-12">
           <div class="feature-item">
-            <img class="feature-item__icon" src="assets/images/icons/fire.svg">
+            <span class="feature-item__icon icon icon--fire"></span>
             <h3 class="feature-item__title">Survival Kit</h3>
             <p class="feature-item__content">
               Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow
@@ -148,7 +148,7 @@
 
   <div id="testimonials" class="page-section page-section--testimonials">
     <div class="wrapper wrapper--no-padding-til-small">
-      <h2 class="section-title section-title--blue"><img class="section-title__image" src="assets/images/icons/comment.svg"> Real <strong>Testimonials</strong></h2>
+      <h2 class="section-title section-title--blue"><span class="section-title__image icon icon--comment"></span> Real <strong>Testimonials</strong></h2>
   
       <div class="row row--gutters row--t-padding">
         <div class="row__4-of-12">
