--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
             <span class="feature-item__icon icon icon--wifi"></span>
             <h3 class="feature-item__title">Wi-Fi Waypoints</h3>
             <p class="feature-item__content">
-              We only send you on trips to places we can personally vouch for as being amazing things. Which means we&rsquo;ve
+              We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve
               mapped out where local wi-fi spots are and marked them in our app&rsquo;s map view.
             </p>
           </div>
@@ -197,9 +197,11 @@
     </div>
   </div>
 
-  <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in
-        Touch</a></p>
+  <footer class="footer">
+    <div class="wrapper">
+      <p class="footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</p>
+      <a href="#" class="btn btn--orange">Get in Touch</a>
+    </div>
   </footer>
 </body>
 
