--- a/app/index.html
+++ b/app/index.html
@@ -9,26 +9,40 @@
   <meta name="description"
     content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
   <link rel="stylesheet" href="./temp/css/style.css">
+  <script src="./temp/scripts/app.js" async></script>
 </head>
 
 <body>
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a class="btn" href="#">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-      </ul>
-    </nav>
+  <header class="header">
+    <div class="header__wrapper wrapper">
+      <div class="header__logo">
+        <div class="header__graphic icon icon--clear-view-escapes">clear view escapes</div>
+      </div>
+
+      <div class="header__right-side">
+        <nav class="nav">
+          <ul>
+            <li><a href="#our-beginning">Our Beginning</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+          </ul>
+        </nav>
+        <a class="btn header__btn" href="#">Get in Touch</a>
+      </div>
+
+      <div class="hamburger">
+        <div class="hamburger__line hamburger__line--top"></div>
+        <div class="hamburger__line hamburger__line--mid"></div>
+        <div class="hamburger__line hamburger__line--bot"></div>
+      </div>
+    </div>
   </header>
 
   <div class="large-hero">
     <picture>
       <source media="(min-width: 1380px)"
         srcset="./assets/images/hero--large-hi-dpi.jpg 3840w, ./assets/images/hero--large.jpg 1920w">
-      <source media="(min-width: 990px)"
+      <source media="(min-width: 1025px)"
         srcset="./assets/images/hero--medium-hi-dpi.jpg 2760w, ./assets/images/hero--medium.jpg 1380w">
       <source media="(min-width: 640px)"
         srcset="./assets/images/hero--small-hi-dpi.jpg 1980w, ./assets/images/hero--small.jpg 990w">
@@ -60,7 +74,7 @@
       <div class="row row--gutters">
         <div class="row__4-of-12 row__4-of-12--larger">
           <picture>
-            <source media="(min-width: 1010px)" srcset="./assets/images/our-start.jpg 404w, ./assets/images/our-start-hi-dpi.jpg 808w" sizes="404px">
+            <source media="(min-width: 1025px)" srcset="./assets/images/our-start.jpg 404w, ./assets/images/our-start-hi-dpi.jpg 808w" sizes="404px">
               <!-- sizes is to tell the browser to calculate the screen px inside that much viewport px to choose the image with suitalbe width-->
               <!-- browser will assume sizes = viewport width if we don't specify -->
             <!-- <source media="(min-width: 800px)" srcset="./assets/images/our-start-portrait.jpg 382w, ./assets/images/our-start-portrait-hi-dpi.jpg 764w" sizes="322px"> -->
