Completed the hamburger.

--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,7 @@
       </div>
 
       <div class="hamburger">
-        <div class="hamburger__line hamburger__line--top"></div>
-        <div class="hamburger__line hamburger__line--mid"></div>
-        <div class="hamburger__line hamburger__line--bot"></div>
+        <div class="hamburger__line"></div>
       </div>
     </div>
   </header>
