--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
   <meta name="description"
     content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
   <link rel="stylesheet" href="./temp/css/style.css">
-  <script src="./temp/scripts/app.js" async></script>
 </head>
 
 <body>
@@ -215,6 +214,9 @@
       <a href="#" class="btn btn--orange">Get in Touch</a>
     </div>
   </footer>
+
+  
+  <script src="./temp/scripts/app.js" ></script>
 </body>
 
 </html>
