--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <meta name="description"
     content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
   <link rel="stylesheet" href="./temp/css/style.css">
+  <script src="./temp/scripts/app.js" defer></script>
 </head>
 
 <body>
@@ -215,8 +216,23 @@
     </div>
   </footer>
 
+  <div class="lightbox">
+    <div class="lightbox__wrapper">
+      <h2 class="section-title section-title--blue section-title--b-margin-small"><span class="section-title__image icon icon--mail"></span> Real <strong>Testimonials</strong></h2>
+      <p class="lightbox__description">
+        We will have an online order system in place soon. Until then, connect with us on any platform below.
+      </p>
+      <div class="social-icons">
+        <a href="#" class="social-icons__icon"><span class="icon icon--facebook"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
+      </div>
+    </div>
+    
+    <div class="lightbox__close">X</div>
+  </div>
   
-  <script src="./temp/scripts/app.js" ></script>
 </body>
 
 </html>
