Completed build task

--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,17 @@
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description"
     content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <!-- build:css ./assets/css/style.css -->
   <link rel="stylesheet" href="./temp/css/style.css">
+  <!-- endbuild -->
+
+  <!-- build:js ./assets/scripts/Vendor.js -->
   <script src="./temp/scripts/Vendor.js"></script>
+  <!-- endbuild -->
+
+  <!-- build:js ./assets/scripts/App.js -->
   <script src="./temp/scripts/App.js" defer></script>
+  <!-- endbuild -->
 </head>
 
 <body>
