--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,9 @@
 <body>
     <header class="header">
         <div class="header__wrapper wrapper">
-            <div class="header__logo">
+            <a href="#hero" class="header__logo">
                 <div class="header__graphic icon icon--clear-view-escapes">clear view escapes</div>
-            </div>
+            </a>
 
             <div class="header__right-side">
                 <nav class="nav">
@@ -45,7 +45,7 @@
         </div>
     </header>
 
-    <div class="large-hero">
+    <div id="hero" class="large-hero">
         <picture>
             <source media="(min-width: 1380px)"
                 srcset="./assets/images/hero--large-hi-dpi.jpg 3840w, ./assets/images/hero--large.jpg 1920w">
@@ -76,19 +76,19 @@
                 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">
                 Ever since, we&rsquo;ve been working to make travel <strong>better for everyone</strong>.</h3>
             <div class="wrapper wrapper--medium wrapper--b-margin">
-                <img srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 967w, assets/images/first-trip-hi-dpi.jpg 1952w"
+                <img class="lazyload" data-srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 967w, assets/images/first-trip-hi-dpi.jpg 1952w"
                     sizes="(min-width: 976px) 967px, 100vw" alt="Couple walking down a street.">
             </div>
             <div class="row row--gutters">
                 <div class="row__4-of-12 row__4-of-12--larger">
                     <picture>
                         <source media="(min-width: 1025px)"
-                            srcset="./assets/images/our-start.jpg 404w, ./assets/images/our-start-hi-dpi.jpg 808w"
+                            data-srcset="./assets/images/our-start.jpg 404w, ./assets/images/our-start-hi-dpi.jpg 808w"
                             sizes="404px">
                         <!-- sizes is to tell the browser to calculate the screen px inside that much viewport px to choose the image with suitalbe width-->
                         <!-- browser will assume sizes = viewport width if we don't specify -->
                         <!-- <source media="(min-width: 800px)" srcset="./assets/images/our-start-portrait.jpg 382w, ./assets/images/our-start-portrait-hi-dpi.jpg 764w" sizes="322px"> -->
-                        <img srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w"
+                        <img class="lazyload" data-srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w"
                             alt="Our founder, Jane Doe">
                     </picture>
                 </div>
